@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libbde],
- [20110829],
+ [20110830],
  [jbmetz@users.sourceforge.net])
 
 AC_CONFIG_SRCDIR(
